<resources>
    <string name="app_name">StarBugs v0</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_btn">Sign In</string>

    <string name="welcome1_label">Welcome to SnapGrade</string>
    <string name="welcome2_label">Let\'s get started!</string>
    <string name="admin_label">Admin:</string>
    <string name="admin_name">Name</string>
    <string name="patient_info_btn">Enter Patient Information</string>
    <string name="skip_btn">Skip</string>
    <string name="title_activity_patient_info">PatientInfo</string>
    <string name="admin_pw">Password</string>

    <string name="patient_info_title">\nPatient Information\n</string>
    <string name="name_label">Name:</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name</string>
    <string name="mid_name">Middle name</string>
    <string name="bpjs_label">BPJS*:</string>
    <string name="ktp_note">If no BPJS, please enter KTP Number</string>
    <string name="bpjs_number">Number</string>
    <string name="gender_label">Gender*:</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="dob_label">Date of Birth:</string>
    <string name="phone_label">Phone:</string>
    <string name="phone_number">Number</string>
    <string name="pick_date">Pick Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="clinic_label">Clinic*:</string>
    <string name="clinic_name">Clinic name</string>

    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>

    <string name="step1_label">Step 1:</string>
    <string name="step2_label">Step 2:</string>
    <string name="step3_label">Step 3:</string>
    <string name="step1_instruct">Attach Fundus Lens\nto Phone</string>
    <string name="step2_instruct">Apply Dilation Eyedrops (if available)</string>
    <string name="step3_instruct">Adjust Position To Obtain a Clear Field of View of the Fundus</string>


    <string name="take_pic_instruct">Click on one of the boxes\nbelow to take picture</string>
    <string name="left_eye_title">Left Eye</string>
    <string name="right_eye_title">Right Eye</string>
    <string name="od_position_label">Optic Disc\nPosition</string>
    <string name="od_left_label">Left:</string>
    <string name="od_center_label">Center:</string>
    <string name="getGrade">Grade</string>
    <string name="getPhoto">Add Photo</string>


    <string name="ug_label">UG</string>
    <string name="y0_label">Y0</string>
    <string name="y1_label">Y1</string>
    <string name="y2_label">Y2</string>
    <string name="regrade_btn">Regrade</string>
    <string name="new_patient_btn">New Patient</string>

    <string name="result_title">Grading result for </string>
    <string name="gradeText">Grade</string>
    <string name="title_activity_tutorial">tutorial</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_admin_login">Administrator Login</string>

    <string name="y0_result">Healthy Retina</string>
    <string name="y0_description">- Come back for annual rescreen\n- Maintain low sugar intake\n- Make sure to exercise regularly</string>
    <string name="y1_result">Mildly Defective</string>
    <string name="y1_description">- Refer to RSUD</string>
    <string name="y2_result">Moderately Defective</string>
    <string name="y2_description">-Immediately refer to RSUD, then to RSCM\n- may encounter floaters/visual loss\n- may need to be treated with laser surgery</string>
    <string name="ug_result">Ungradable</string>
    <string name="ug_description">- Images are ungradable\n- Consult medical staff for manual screening</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="done_txt">Done</string>
    <string name="requiredText">* Required</string>
    <string name="loadingText">Loading...</string>
    <string name="title_activity_drawer">SnapGrade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
