<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_info_title"
        android:id="@+id/patientInfoTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name_label"
            android:id="@+id/adminLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editLastName"
            android:layout_marginRight="8sp"
            android:hint="@string/last_name"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="181dp"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editFirstName"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:layout_marginLeft="8sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editMiddleName"
                android:layout_marginRight="8sp"
                android:hint="@string/mid_name" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bpjs_label"
            android:id="@+id/bpjsLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editBpjsNumber"
            android:hint="@string/bpjs_number"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gender_label"
            android:id="@+id/genderLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGender"
            android:longClickable="true"
            android:layout_gravity="top">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_label"
                android:id="@+id/radioM"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_label"
                android:id="@+id/radioF"
                android:checked="false" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:baselineAligned="false"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dob_label"
            android:id="@+id/dobLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:id="@+id/pickDate"
            android:onClick="setDate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:id="@+id/dateOfBirth"
            android:layout_gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_label"
            android:id="@+id/phoneLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editPhoneNumber"
            android:layout_weight="1"
            android:hint="@string/phone_number" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/clinic_label"
            android:id="@+id/clinicLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editClinic"
            android:layout_marginRight="8sp"
            android:hint="@string/clinic_name"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="139dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn"
            android:id="@+id/btnBack1"
            android:clickable="true"
            android:textSize="24sp"
            android:background="#945fd9f4"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:layout_gravity="right"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:id="@+id/btnNext1"
            android:clickable="true"
            android:textSize="24sp"
            android:background="#945fd9f4"
            android:layout_alignTop="@+id/btnBack1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="57dp"
            android:layout_marginEnd="57dp" />
    </RelativeLayout>

</LinearLayout>
