<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_info_title"
        android:id="@+id/patientInfoTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name_label"
            android:id="@+id/nameLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editLastName"
            android:layout_weight="1"
            android:layout_marginRight="8sp"
            android:hint="@string/last_name"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editFirstName"
            android:layout_weight="0.40"
            android:hint="@string/first_name"
            android:layout_marginLeft="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:id="@+id/editMiddleName"
            android:layout_marginRight="8sp"
            android:hint="@string/mid_name"
            android:layout_weight="0.08"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="368dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bpjs_label"
            android:id="@+id/bpjsLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editBpjsNumber"
            android:layout_weight="1"
            android:hint="@string/bpjs_number"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gender_label"
            android:id="@+id/genderLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RadioGender"
            android:longClickable="true"
            android:layout_gravity="top">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_label"
                android:id="@+id/radioM"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_label"
                android:id="@+id/radioF"
                android:checked="false" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dob_label"
        android:id="@+id/textView11"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="8sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:layout_weight="0.10"
        android:weightSum="1">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_label"
            android:id="@+id/textView12"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_weight="1"
            android:layout_marginRight="8sp"
            android:hint="@string/phone_number"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.71">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_btn"
            android:id="@+id/button4"
            android:clickable="true"
            android:textSize="24sp"
            android:background="#945fd9f4"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="91dp"
            android:layout_gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:id="@+id/button3"
            android:clickable="true"
            android:textSize="24sp"
            android:background="#945fd9f4"
            android:layout_alignTop="@+id/button4"
            android:layout_toRightOf="@+id/button4"
            android:layout_toEndOf="@+id/button4"
            android:layout_marginLeft="77dp"
            android:layout_marginStart="77dp" />
    </RelativeLayout>

</LinearLayout>
