<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_info_title"
        android:id="@+id/patientInfoTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name_label"
            android:id="@+id/nameLabel"
            android:layout_marginLeft="12sp"
            android:layout_marginRight="8sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editLastName"
            android:layout_weight="1"
            android:layout_marginRight="8sp"
            android:hint="@string/last_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editFirstName"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8sp" />

        <EditText
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/editMiddleName"
            android:layout_marginRight="8sp"
            android:hint="@string/mid_name" />
    </LinearLayout>

</LinearLayout>